tests/cases/should_fail/unclosed_string_literal/case.stderr
error: unclosed string literal
 --> $DIR/case.hash:1:2
1 |   "a
  |    ^^ here
